<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>

	<parent>
       	<groupId>org.springframework.boot</groupId>
       	<artifactId>spring-boot-starter-parent</artifactId>
       	<version>3.0.0</version>
       	<relativePath/> <!-- lookup parent from repository -->
    </parent>
	<groupId>com.alok.home</groupId>
	<artifactId>home-api-service</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>home-api-service</name>
	<description>Home API Service</description>

	<properties>
		<maven.test.skip>true</maven.test.skip>
		<java.version>17</java.version>
		<lombok.version>1.18.22</lombok.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.alok.home</groupId>
			<artifactId>home-commons</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.alok.mqtt</groupId>
			<artifactId>mqtt-proxy</artifactId>
			<version>1.0.4</version>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.h2database</groupId>
    		<artifactId>h2</artifactId>
    		<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.32</version>
			<scope>runtime</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
			<version>1.18.26</version>
			<optional>true</optional>
        </dependency>
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>compile</scope>
        </dependency>

		<dependency>
			<groupId>org.javatuples</groupId>
			<artifactId>javatuples</artifactId>
			<version>1.2</version>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!--
Note: "github" repository definition is present in setting.xml
-->
	<distributionManagement>
		<repository>
			<id>mqtt-proxy</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/alokkusingh/mqtt-proxy</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
						<configuration>
							<buildArgs>
								-H:+PrintClassInitialization
								-Dspring.graal.verbose=true
								-H:+InlineBeforeAnalysis
								-H:ReflectionConfigurationFiles=native/reflectconfig.json
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>


	</profiles>

</project>
